fix(book): persist selections and enforce paper visibility (PRD-028)